<resources>
    <string name="app_name">Bashar HR Manager</string>
    <string-array name="genderSpinner">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other..</item>

    </string-array>
    <string-array name="spinnerCountry">
        <item>Country</item>
        <item>+963</item>
        <item>+964</item>
        <item>+966</item>
        <item>+1</item>
        <item>+66</item>
    </string-array>

    <string name="githubHyperLink"><a href="https://github.com/basharBruh/BasharShehab">GitHub</a> </string>
    <string name="department">Department</string>
    <string name="add">Add</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="remove_employee">Remove employee</string>
    <string name="about">About</string>
    <string name="about_project">This is a one man project made by me,\nBashar Shehab\nFor more information, visit:</string>
    <string name="github_link">gitHubLink</string>
    <string name="father_name">Father Name</string>
    <string name="bruh">bruh</string>
    <string name="fill_space">Please fill all the spaces</string>
    <string name="emp_add_success"> Employee added successfully!</string>
    <string name="employee_string"> Employee </string>
    <string name="has_been_added"> has been added </string>
    <string name="hr_username">Username</string>
    <string name="HR_added_success">HR Administrator added successfully!</string>
    <string name="HR_username">Username</string>
    <string name="fullName">Full Name</string>
    <string name="start_music">Start Music</string>
    <string name="stop_music">Stop Music</string>
</resources>