<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/itemAddEmployee"
        android:icon="@drawable/ic_addemployee"
        android:title="@string/add_new_employee"
        app:showAsAction="always"
        android:visible="false"
        />
    <item android:id="@+id/itemRemoveEmployee"
        android:icon="@drawable/ic_employeeremove"
        android:title="@string/remove_employee"
        app:showAsAction="always"
        android:visible="false"
        />
    <item android:id="@+id/about"
        android:icon="@drawable/ic_addemployee"
        android:title="@string/about"
        app:showAsAction="never"
        />
    <item android:id="@+id/search_button"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:visible="false"/>

    <item android:id="@+id/startMusic"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/start_music"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/stopMusic"
        android:icon="@drawable/ic_baseline_music_off_24"
        android:title="@string/stop_music"
        app:showAsAction="ifRoom" />
</menu>