<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddingEmployee"
    android:background="@drawable/backgroundbash"
    tools:ignore="Autofill">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/bruh"
            app:srcCompat="@drawable/add_employee_white_in_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/AddEmpFirstName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@drawable/fieldbackground"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AddEmpLastName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@drawable/fieldbackground"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/EmpFatherName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/father_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/EmpSpinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/fieldbackground"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/emp_birth_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/Emp_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/EmpSpinnerCountry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/fieldbackground"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/Emp_phone"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@drawable/fieldbackground"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAlignment="center" />


        </LinearLayout>

        <EditText
            android:id="@+id/Emp_department"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/department"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/buttoncolorround"
            android:text="@string/add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>