<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbash"
    tools:context=".Activities.LoginPage"
    tools:ignore="Autofill" >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/logo_transparent"
            android:contentDescription="@string/logo" />

        <EditText
            android:id="@+id/HR_userName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/HR_username"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/HR_password"
            android:layout_width="match_parent"

            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fieldbackground"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttoncolorround"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/HR_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttoncolorround"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
