<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.About"
    android:background="@drawable/backgroundbash">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="228dp"
            android:layout_height="384dp"
            app:srcCompat="@drawable/logo_transparent"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/AboutMe"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:text="@string/about_project"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            style="@style/shadow"
            android:elegantTextHeight="true"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/githublogo"
                android:layout_width="113dp"
                android:layout_height="58dp"
                app:srcCompat="@drawable/githubcopy"
                android:onClick="onClick"
                android:contentDescription="@string/github_link" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>